[tool.poetry]
name = "repl-nix-praudexai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_praudexai"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
auth = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
